--- a/day01/mobileWeatherApp/app/src/main/res/values/strings.xml
+++ b/day01/mobileWeatherApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">mobileWeatherApp</string>
+    <string name="today">Today</string>
+    <string name="currently">Currently</string>
+    <string name="weekly">Weekly</string>
 </resources>
