--- a/day01/mobileWeatherApp/app/src/main/res/values/strings.xml
+++ b/day01/mobileWeatherApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">mobileWeatherApp</string>
+    <string name="app_name">WeatherApp</string>
     <string name="today">Today</string>
     <string name="currently">Currently</string>
     <string name="weekly">Weekly</string>
+    <string name="getCurrentLocation">Use current location</string>
 </resources>
