--- a/day03/mobileWeatherApp/app/src/main/res/values/strings.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="weekly">Weekly</string>
     <string name="getCurrentLocation">Use current location</string>
     <string name="hintSearchView">Search location…</string>
+    <string name="temperature_text">%1$s %2$s</string>
+    <string name="wind_text">%1$s %2$s %3$s</string>
 </resources>
