--- a/day03/mobileWeatherApp/app/src/main/res/values/strings.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="hintSearchView">Search location…</string>
     <string name="temperature_text">%1$s %2$s</string>
     <string name="wind_text">%1$s %2$s %3$s</string>
+    <string name="weather_illustration">weather illustration</string>
+    <string name="wind_icon" />
 </resources>
